--- a/app/globals.css
+++ b/app/globals.css
@@ -369,7 +369,7 @@
   }
 
   .sidebar-link {
-    @apply flex gap-3 items-center py-1 md:p-3 2xl:p-4 rounded-lg justify-center xl:justify-start;
+    @apply flex gap-3 items-center py-1 md:p-3 2xl:p-4 rounded-lg justify-center xl:justify-start lg:hover:bg-slate-100 lg:transition-all lg:ease-in-out lg:duration-200;
   }
 
   .sidebar-label {
